force-app/main/default/objects/Feature_Flag__mdt/fields/Live_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Live_Endpoint__c</fullName>
    <label>Live Endpoint</label>
    <type>Url</type>
</CustomField>