force-app/main/default/objects/Feature_Flag__mdt/fields/Mock_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Mock_Endpoint__c</fullName>
    <label>Mock Endpoint</label>
    <type>Url</type>
</CustomField>