force-app/main/default/objects/Feature_Flag__mdt/fields/Target_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Target_Profiles__c</fullName>
    <label>Target Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>